Fixed problems with mobile Markdown Box buttons not submitting, added light persistent borders around Markdown Boxes on mobile so users can see the boundaries without hover

--- a/server/public/styles.css
+++ b/server/public/styles.css
@@ -31,6 +31,13 @@ foreignObject {
   transition: border 200ms ease, box-shadow 200ms ease;
 }
 
+@media screen and (max-width: 1024px) {
+  foreignObject {
+    border: 2px solid hsl(0deg, 0%, 96%);
+    border-radius: 4px;
+  }
+}
+
 foreignObject:hover {
   border: 2px solid hsl(171deg, 100%, 41%); /* Bulma's primary */
   border-radius: 4px;
